Done orders (one, history, api): api, swagger, test
